# MPA_KR3_Digital_Twin

./: .gitignore  Dockerfile  Readme.md  entrypoint.sh
Documents/: Readme.md
Documents/Lab/: Answers.docx  (+2 more)
Software/: Readme.md
Software/Experimental/CppOpenShowVarClient/: CMakeLists.txt  CppOpenShowVar.md  CppOpenShowVar.rst  Doxyfile
Software/Experimental/CppOpenShowVarClient/app/Main/: CMakeLists.txt  main.cpp
Software/Experimental/CppOpenShowVarClient/app/TcpClient/: CMakeLists.txt  main.cpp
Software/Experimental/CppOpenShowVarClient/docs/: CMakeLists.txt
Software/Experimental/CppOpenShowVarClient/include/: CMakeLists.txt
Software/Experimental/CppOpenShowVarClient/include/KukaClient/: CMakeLists.txt  KukaClient.hpp
Software/Experimental/CppOpenShowVarClient/include/MYAXIS_type/: CMakeLists.txt  MYAXIS_type.hpp
Software/Experimental/CppOpenShowVarClient/include/Message/: CMakeLists.txt  Message.hpp
Software/Experimental/CppOpenShowVarClient/include/ReadMessage/: CMakeLists.txt  ReadMessage.hpp
Software/Experimental/CppOpenShowVarClient/include/ResponseMessage/: CMakeLists.txt  ResponseMessage.hpp
Software/Experimental/CppOpenShowVarClient/include/TcpClient/: CMakeLists.txt  TcpClient.hpp
Software/Experimental/CppOpenShowVarClient/include/WriteMessage/: CMakeLists.txt  WriteMessage.hpp
Software/Experimental/CppOpenShowVarClient/src/KukaClient/: CMakeLists.txt  KukaClient.cpp
Software/Experimental/CppOpenShowVarClient/src/MYAXIS_type/: CMakeLists.txt  MYAXIS_type.cpp
Software/Experimental/CppOpenShowVarClient/src/Message/: CMakeLists.txt  Message.cpp
Software/Experimental/CppOpenShowVarClient/src/ReadMessage/: CMakeLists.txt  ReadMessage.cpp
Software/Experimental/CppOpenShowVarClient/src/ResponseMessage/: CMakeLists.txt  ResponseMessage.cpp
Software/Experimental/CppOpenShowVarClient/src/TcpClient/: CMakeLists.txt  TcpClient.cpp
Software/Experimental/CppOpenShowVarClient/src/WriteMessage/: CMakeLists.txt  WriteMessage.cpp
Software/Experimental/CppOpenShowVarClient/tests/: CMakeLists.txt  test_KukaClient.cpp  test_main.cpp
Software/Experimental/CppOpenShowVarClient/tests/TestKukaClient/: CMakeLists.txt  test_KukaClient.cpp
Software/Experimental/CppOpenShowVarClient/tests/TestMYAXISType/: CMakeLists.txt  test_MYAXIS_Type.cpp
Software/Experimental/CppOpenShowVarClient/tests/TestReadMessage/: CMakeLists.txt  test_ReadMessage.cpp
Software/Experimental/CppOpenShowVarClient/tests/TestResponseMessage/: CMakeLists.txt  test_ResponseMessage.cpp
Software/Experimental/CppOpenShowVarClient/tests/TestTcpClient/: CMakeLists.txt  test_TcpClient.cpp
Software/Experimental/CppOpenShowVarClient/tests/TestWriteMessage/: CMakeLists.txt  test_WriteMessage.cpp
Software/OPCUA_ROS2_Env/opcua_ws/src/opcua_server/: package.xml  setup.cfg  setup.py
Software/OPCUA_ROS2_Env/opcua_ws/src/opcua_server/opcua_server/: basic_server.py
Software/ROS2_Env/kr3r540_ws/src/kr3r540_bringup/: CMakeLists.txt  package.xml  rosdoc2.yaml
Software/ROS2_Env/kr3r540_ws/src/kr3r540_bringup/launch/: System.launch.py  digital_shadow.launch.py  digital_twin.launch.py  display.launch.py  display.launch.xml  kr3r540_gazebo.launch.py  kr3r540_gazebo.launch.xml  kr3r540_ign.launch.py  kr3r540_ign_controller.launch.py  kr3r540_kinematics_server.launch.py  kr3r540_real.launch.py  kr3r540_real_controller.launch.py  kr3r540_system.launch.py
Software/ROS2_Env/kr3r540_ws/src/kr3r540_bringup/real_config/: kr3r540_real_controllers.yaml
Software/ROS2_Env/kr3r540_ws/src/kr3r540_bringup/rviz/: kr3r540.rviz  kr3r540_sim.rviz  kr3r540_urdf_config.rviz
Software/ROS2_Env/kr3r540_ws/src/kr3r540_bringup/sim_config/: initial_positions_sim.yaml  kr3r540_sim_controllers.yaml
Software/ROS2_Env/kr3r540_ws/src/kr3r540_bringup/test_node/: move_robot.py
Software/ROS2_Env/kr3r540_ws/src/kr3r540_bringup/world/: kr3r540_world  kr3r540_world.world
Software/ROS2_Env/kr3r540_ws/src/kr3r540_description/: CMakeLists.txt  package.xml
Software/ROS2_Env/kr3r540_ws/src/kr3r540_description/meshes/collision/: Base_collusion.stl  Finger_1_collusion.stl  Finger_2_collusion.stl  greifer.stl
Software/ROS2_Env/kr3r540_ws/src/kr3r540_description/meshes/visual/: Base_visual.stl  Finger_1_visual.stl  Finger_2_visual.stl
Software/ROS2_Env/kr3r540_ws/src/kr3r540_description/urdf/: kr3r540.urdf  kr3r540.urdf.xacro  kr3r540_gazebo.xacro  kr3r540_ros2_control.xacro
Software/ROS2_Env/kr3r540_ws/src/kr3r540_description/world/: kr3r540_world.sdf
Software/ROS2_Env/kr3r540_ws/src/kr3r540_forward_kinematics_node/: CMakeLists.txt  package.xml
Software/ROS2_Env/kr3r540_ws/src/kr3r540_forward_kinematics_node/include/kr3r540_forward_kinematics_node/: forward_kinematics_solver.hpp  kr3r540_forward_kinematics_node.hpp
Software/ROS2_Env/kr3r540_ws/src/kr3r540_forward_kinematics_node/src/: forward_kinematics_solver.cpp  kr3r540_forward_kinematics_node.cpp  main.cpp
Software/ROS2_Env/kr3r540_ws/src/kr3r540_hardware_interface/: CMakeLists.txt  kr3r540_hardware_interface_plugin.xml  package.xml
Software/ROS2_Env/kr3r540_ws/src/kr3r540_hardware_interface/include/KukaClient/: KukaClient.hpp
Software/ROS2_Env/kr3r540_ws/src/kr3r540_hardware_interface/include/Message/: Message.hpp
Software/ROS2_Env/kr3r540_ws/src/kr3r540_hardware_interface/include/ReadMessage/: ReadMessage.hpp
Software/ROS2_Env/kr3r540_ws/src/kr3r540_hardware_interface/include/ResponseMessage/: ResponseMessage.hpp
Software/ROS2_Env/kr3r540_ws/src/kr3r540_hardware_interface/include/TcpClient/: TcpClient.hpp
Software/ROS2_Env/kr3r540_ws/src/kr3r540_hardware_interface/include/WriteMessage/: WriteMessage.hpp
Software/ROS2_Env/kr3r540_ws/src/kr3r540_hardware_interface/include/kr3r540_hardware_interface/: kr3r540_interface.hpp
Software/ROS2_Env/kr3r540_ws/src/kr3r540_hardware_interface/src/: kr3r540_interface.cpp
Software/ROS2_Env/kr3r540_ws/src/kr3r540_kinematics_action_server/: CMakeLists.txt  package.xml
Software/ROS2_Env/kr3r540_ws/src/kr3r540_kinematics_action_server/src/: kinematics_solver.cpp  kr3r540_kinematics_action_server.cpp
(+226 files in other folders)
